--- a/frontend/src/css/estilos.css
+++ b/frontend/src/css/estilos.css
@@ -98,7 +98,7 @@ body {
 	background-size: cover;
 	position: absolute;
 	top: 0;
-	/* transform: rotateY(180deg); */
+	transform: rotateY(180deg);
 	backface-visibility: hidden;
 }
 
