--- a/frontend/src/components/Home/styles.css
+++ b/frontend/src/components/Home/styles.css
@@ -63,6 +63,11 @@ body{
   cursor: pointer;
 }
 
+.error{
+  color: red;
+  font-size: 1em;
+  margin-block-start: .5em;
+}
 
 .button:hover{
   background-color: rgb(0, 50, 186);
