--- a/frontend/src/css/sections.css
+++ b/frontend/src/css/sections.css
@@ -10,3 +10,36 @@
 .sections > h1 {
   color: rgb(116, 116, 116);
 }
+
+.sections-flex-row{
+  display: flex;
+  flex-wrap: wrap
+}
+
+.sections-grid{
+  display: grid;
+  padding: 0 1em;
+  gap: 1%;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr ));
+}
+
+.container-card{
+  max-width: 100%;
+  background-color: white;
+  border: 1px solid rgba(0,0,0,.125);
+}
+
+.container-card > div > .tarjeta,.container-card  > div > .tarjeta > .card, .container-card > div > .tarjeta > .card-body{
+  min-height: 100%;
+  max-width: 100%;
+  border: none !important;
+}
+
+
+.rccs{
+  max-width: 100%;
+}
+
+.rccs__card {
+  max-width: 100%;
+}
