--- a/frontend/src/components/PassVisible/PassVisible.css
+++ b/frontend/src/components/PassVisible/PassVisible.css
@@ -7,6 +7,12 @@
 .container-pass-visible > input {
   height: 3em;
   width: 100%;
+  padding: 1em;
+  font-weight: bold;
+}
+
+.container-pass-visible > input::placeholder{
+  font-weight: bold;
 }
 
 .button-pass-visible{
