--- a/frontend/src/components/Transaction/styles.css
+++ b/frontend/src/components/Transaction/styles.css
@@ -1,9 +1,48 @@
 .transaction{
-  border-top: 1px solid #cccc;
   border-bottom: 1px solid #cccc;
+  border-top: 1px solid #cccc;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: .5em;
   padding: 1em;
 }
 
-.transaction > p {
+.transaction > span{
+  color: gray;
+  font-size: 1em;
+  font-style: italic;
+}
+
+.transaction > h3 {
+  color: rgb(51, 51, 51);
+  font-size: 1.3em;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.transaction > div{
+  display: flex;
+  flex-wrap: wrap ;
+  gap: 1em;
+}
+.transaction > div > p{
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+  justify-content: flex-start;
+  margin: 0;
+}
+
+.transaction > div > p > h5{
+  font-size: 1em;
+  margin: 0;
+}
+
+.transaction > div > p > span {
+  color: rgb(95, 95, 95);
+  font-size: 1em;
+  font-weight: 600;
   margin: 0;
 }
